IC-Prod/objects/xtma_Email_Result__c.object
<CustomObject>
    <fields>
        <fullName>AggregationStatus__c</fullName>
        <label>Aggregation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate__c</fullName>
        <formula>Number_Bounced__c  /  Number_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVy7EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Through_Rate__c</fullName>
        <formula>Number_of_Unique_Clicks__c /  Number_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deliverability_Rate__c</fullName>
        <formula>Number_Delivered__c /  Number_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverability Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Addresses__c</fullName>
        <label>Invalid Addresses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Bounced__c</fullName>
        <formula>Number_of_Hard_Bounces__c  +  Number_of_Soft_Bounces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Delivered__c</fullName>
        <formula>Number_Sent__c  -  Number_Bounced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Not_Opened__c</fullName>
        <formula>Number_Delivered__c   -  Number_of_Unique_Opens__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Not Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Sent__c</fullName>
        <label>Number Sent</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Unsubscribed__c</fullName>
        <label>Number Unsubscribed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <description>Number of contact records.</description>
        <label>Number of Contacts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Undeliverables__c</fullName>
        <label>Number of Existing Undeliverables</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Unsubscribes__c</fullName>
        <label>Number of Existing Unsubscribes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hard_Bounces__c</fullName>
        <description>Number of hard bounces.</description>
        <label>Number of Hard Bounces</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <description>Number of lead records.</description>
        <label>Number of Leads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Soft_Bounces__c</fullName>
        <description>Number of soft bounces.</description>
        <label>Number of Soft Bounces</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscribers_Forwarding_Email__c</fullName>
        <description>Number of subscribers who used Forward to a Friend.</description>
        <label>Number of Subscribers Forwarding Email</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Opens__c</fullName>
        <label>Number of Unique Opens</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Rate__c</fullName>
        <formula>Number_of_Unique_Opens__c /  Number_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Records_without_Addresses__c</fullName>
        <label>Records without Addresses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Records__c</fullName>
        <label>Total Number of Records</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Rate__c</fullName>
        <formula>Number_Unsubscribed__c /  Number_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Email Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Date_Sent__c</columns>
        <columns>From_Address__c</columns>
        <columns>Number_of_Contacts__c</columns>
        <columns>Number_Delivered__c</columns>
        <columns>Number_of_Unique_Opens__c</columns>
        <columns>Number_of_Unique_Clicks__c</columns>
        <columns>Number_of_Hard_Bounces__c</columns>
        <columns>Number_of_Soft_Bounces__c</columns>
        <columns>Open_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>MarketDevelopers</roleAndSubordinates>
            <roleAndSubordinates>MarketDevelopmentManager</roleAndSubordinates>
            <roleAndSubordinates>MarketingCommunications</roleAndSubordinates>
            <roleAndSubordinates>VPMarketing</roleAndSubordinates>
            <roleAndSubordinates>VPSalesMarketing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x_single_quotes</fullName>
        <columns>NAME</columns>
        <columns>Date_Sent__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&apos;</value>
        </filters>
        <label>Email Names w single quotes - MUST CHG!</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>x_single_quotesX</fullName>
        <columns>NAME</columns>
        <columns>Date_Sent__c</columns>
        <columns>Subject__c</columns>
        <columns>AggregationStatus__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Email Names X</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>